--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit_lottie==0.0.2
-streamlit-option-menu==0.3.6
-streamlit==1.3.0
-requests==2.24.0
-Pillow==8.4.0
-protobuf~=3.19.0
-watchdog==2.1.8
+streamlit_lottie
+streamlit-option-menu
+streamlit
+requests
+
